# arcium

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  README.md  ai-powerhouse.code-workspace  config.json  config.json.example  pyproject.toml
.github/: copilot-instructions.md
examples/: run_pipeline.py  smoke_test_agent.py  smoke_test_mcp.py
examples/sample_architecture/: architecture.md  standards.md
scripts/: setup_vault.py
src/arcium/: __init__.py  __main__.py  config.py
src/arcium/agent/: __init__.py  backend.py  claude_code_agent.py  react.py
src/arcium/mcp/: __init__.py  __main__.py  server.py
src/arcium/projects/: __init__.py  tools.py
src/arcium/review/: __init__.py  __main__.py  cli.py  reviewer.py
src/arcium/vault/: __init__.py  __main__.py  config.py  server.py  tools.py
src/arcium/workflow/: __init__.py  models.py  poc_pipeline.py  skill_injector.py
templates/vault/00-index/: CONVERSATIONS.md  GLOSSARY.md  INDEX.md  POC-RUNS.md  PROJECTS.md  SCHEMA.md
templates/vault/01-firm-context/: CONSTRAINTS.md  DOMAIN.md  POC-TEMPLATE.md  STAKEHOLDERS.md
templates/vault/03-agents/workflows/: session-close.md
templates/vault/04-skills/: communications-specialist.md  senior-architect.md  senior-engineer.md  solutions-critic.md  team-lead.md  vault-navigation.md
